--- a/dubbo-demo/dubbo-provider/pom.xml
+++ b/dubbo-demo/dubbo-provider/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>dubbo3-demo</artifactId>
+        <artifactId>dubbo-demo</artifactId>
         <groupId>com.tyron</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>dubbo3-provider</artifactId>
+    <artifactId>dubbo-provider</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -69,7 +69,7 @@
         <!-- 自定义api -->
         <dependency>
             <groupId>com.tyron</groupId>
-            <artifactId>dubbo3-api</artifactId>
+            <artifactId>dubbo-api</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
