--- a/dubbo-demo/pom.xml
+++ b/dubbo-demo/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.tyron</groupId>
-    <artifactId>dubbo3-demo</artifactId>
+    <artifactId>dubbo-demo</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
